Overflow issue resolved

--- a/css/custom-skew.css
+++ b/css/custom-skew.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     list-style: none;
     font-family: "Open Sans",sans-serif;
-    height: 4000px;
+    max-width: 100%;
 
 }
 section{
